fixed goods, controller, trialship